# MySteps

./: .gitignore  A. Arrival of the General  A. Arrival of the General.CPP  A. Dragons  A. Expression.CPP  A. I Wanna Be the Guy  A. I Wanna Be the Guy.CPP  A. The New YearMeeting Friends  A_Is_it_rated_2.cpp  A_Isosceles.cpp  B_Most_Frequent_Substrings.cpp  B_Perfect.cpp  C. Registration system  CMakeLists.txt  CMakePresets.json  C_Many_Formulas.cpp  C_New_Skill_Acquired.cpp  C_Sneaking_Glances.cpp  D_Go_Straight.cpp  D_Keine_s_Prefix_Sum.cpp  E_Interview.cpp  E_程序自动分析.cpp  Energy_Synergy_Matrix.cpp  F_Portal.cpp  G_Path_Queries.cpp  H_1_Maximize_the_Largest_Component_Easy_Version.cpp  J_Uniform_Random_Descent_Process.cpp  Kefa_and_Company.cpp  LICENSE  Multiple_Clocks.cpp  P_1164_小A点菜.cpp  P_1309_NOIP_2011_普及组_瑞士轮.cpp  P_1621_集合.cpp  P_1886_模板_单调队列_滑动窗口.cpp  P_3367_模板_并查集.cpp  P_3379_模板_最近公共祖先_LCA.cpp  P_3397_地毯.cpp  P_8052_ZYOI_Round_1_Truth_真心话大冒险.cpp  Pacifist_frogs.cpp  README.md  (+13 more)
.cph/: .cayun日常之赏月.cpp_2c951b9176c20fcda2b0542b1656bd56.prob
Documents/: stl.md  注意事项.md
PTA/: 7-2 这题难吗.cpp  7-3 接雨滴的花盆.cpp  7-4 奇思妙想.cpp  7-5 生命之数.cpp  7-6 通顶雪道.cpp  7-8 降维.cpp  7-9 星战.cpp  7-9 星战1.cpp  WAL2-016 愿天下有情人都是失散多年的兄妹.cpp  xmake.lua
Vjudge/: A_Cake_Collection.cpp  C_Who_is_Missing.cpp
acwing/: 125. 耍杂技的牛.cpp  842. 排列数字.cpp  hash.cpp  test.cpp  test1..CPP  你的旅途由此开始.cpp  兔子兔子.CPP  双链表.cpp  得分通胀.cpp  栈.cpp  链表.cpp
codeforces/: A. Alyona and a Square Jigsaw Puzzle.cpp  A. Amusing Joke.CPP  A. Anton and Letters.CPP  A. Arrival of the General.CPP  A. Calculating Function.cpp  A. Candies and Two Sisters.CPP  A. Chat room.cpp  A. Cut Ribbon.cpp  A. Dubstep.CPP  A. Games.CPP  A. HQ9+.CPP  A. Hit the Lottery.CPP  A. I Wanna Be the Guy.CPP  (+24 more)
(+2333 files in other folders)
